kubernetes/portainer/service.yml
apiVersion: v1
kind: Service
metadata:
    name: portainer
    namespace: portainer
    labels:
        app.kubernetes.io/name: portainer
    annotations:
spec:
    type: ClusterIP
    ports:
        - port: 9443
          targetPort: https
          protocol: TCP
          name: https
    selector:
        app.kubernetes.io/name: portainer
